task15.css
@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    padding: 16px;
    background: #FFF7F0;
    overflow-x: hidden;
}

.logo_freeconsultation{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo{
    height: 48px;
    width: 48px;
}

.freeConsultation{
    background: #030303;
    color: #FFF7F0;
    border-radius: 28px;
    border: 0;
    height: 44px;
    width: 176px;
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 14px;
    line-height: 28px;
}

.title_info{
    display: flex;
    align-items: center;
    flex-direction: column;
    padding-left: 45px;
    padding-right: 45px;
    margin-top: 34px;
}

.title{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 36px;
    line-height: 45px;
    text-align: center;
    color: #030303;
    width: 288px;
}

.info{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 26px;
    text-align: center;
    color: #7A746E;
    margin-top: 16px;
    width: 269px;
}

.blue_container{
    display: flex;
    flex-direction: column;
    height: 364px;
    width: 100%;
    background: #755CDE;
    border-radius: 8px;
    margin-top: 32px;
    padding: 24px;
    align-items: flex-end;
}

.graphic_design{
    display: flex;
    height: 192px;
    width: 128px; 
}

.graphic_design_text{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 30px;
    color: #FFFFFF; 
    align-self: flex-start;
    margin-top: 94px;
}

.ui_ux_apps{
    display: flex;
    margin-top: 24px;
    gap: 25px;
}


.ui_ux{
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    padding: 24px;
    background: #F6A560;
    border-radius: 8px;
    width: 100%;
    height: 182px;
}

.ui_ux_pattern{
    height: 64px;
    width: 64px;
}

.apps{
    display: flex;
    align-items: flex-end;
    flex-direction: column;
    padding: 24px;
    background: #F39E9E;
    border-radius: 8px;
    width: 100%;
    height: 182px;
}

.ui_ux_text{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 30px;
    color: #FFFFFF; 
    align-self: flex-start;
    margin-top: 40px;
}

.apps_pattern{
    height: 64px;
    width: 64px;
}

.apps_text{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 30px;
    color: #FFFFFF; 
    align-self: flex-start;
    margin-top: 40px;
}

.illustrations{
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    height: 158px;
    width: 100%;
    background: #EB7565;
    border-radius: 8px;
    margin-top: 24px;
    padding: 24px;
}

.illustration_text{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 30px;
    color: #FFFFFF; 
    align-self: flex-start;
    margin-top: 16px;
}

.photography{
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    height: 182px;
    width: 100%;
    background: #61C4B7;
    border-radius: 8px;
    padding: 24px;
    margin-top: 24px;
}

.photography_text{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 30px;
    color: #FFFFFF; 
    align-self: flex-start;
    margin-top: 40px;
}

.motion_graphics{
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    height: 182px;
    width: 100%;
    border-radius: 8px;
    background: #552049;
    border-radius: 8px;
    padding: 24px;
    margin-top: 24px;
}

.motion_graphics_text{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 30px;
    color: #FFFFFF;
    align-self: flex-start;
    margin-top: 40px;
}

.woman_pattern{
    display: flex;
    justify-content: center;
    margin-top: 100px;
}

.pretty_woman{
    height: 300px;
    width: 300px;
    border-radius: 0px;    
}

.I_am_Ammy{
    display: flex;
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 26px;
    line-height: 33px;
    text-align: center;
    color: #030303;
    margin-top: 40px;
}

.I_am_Ammy_text{
    display: flex;
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 26px;
    color: #7A746E;
    margin-top: 24px;
}

.bottom_button {
    display: flex;
    align-items: center;
    justify-content: center;
}

.free_consultation_button{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 14px;
    line-height: 28px;
    color: #FFF7F0;
    background: #EB7565;
    border-radius: 28px;
    border: 0;
    height: 44px;
    width: 176px;
    margin-top: 24px;
    align-self: center;
}


.my_work_title{
    display: flex;
    flex-direction: column;
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 30px;
    text-align: center;
    color: #030303;
    margin-top: 100px;
}

.slides{
    display: flex;
    gap: 15px;
    justify-content: center;
    margin-top: 32px;
}

.slide_one,
.slide_two,
.slide_three,
.slide_four,
.slide_five{
    background: #D8D8D8;
    border-radius: 10px;
    height: 180px;
    width: 270px;  
}

.arrows{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row-reverse;
    gap: 16px;
    margin-top: 32px;
}

.right_box,
.left_box{
    display: flex;
    height: 64px;
    width: 64px;
    background-color: #030303;
    border-radius: 50%;
    align-items: center;
    justify-content: center;
}

.black_box{
    background: #030303;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    padding-left: 24px;
    padding-right: 24px;
    padding-bottom: 48px;
    margin-top: 100px;
}

.book_call{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 26px;
    line-height: 33px;
    text-align: center;
    color: #FFF7F0;
    margin-top: 49px;
}

.book_call_text{
    font-family: 'Plus Jakarta Sans';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 26px;
    text-align: center;
    color: #FFF7F0;
    margin-top: 24px;
}

.logo_freeconsultation_bottom{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 40px;
    margin-bottom: 16px;
}

